# policy-arena

./: .gitignore  CLAUDE.md  index.html  package.json
convex/: datasets.ts  elo.ts  eloHistory.ts  evalSessions.ts  pairings.ts  policies.ts  recommendations.ts  roundResults.ts  schema.ts  seed.ts
convex/_generated/: api.d.ts
python/: pyproject.toml  resubmit_sessions.py  test_submit.py
python/policy_arena/: __init__.py  client.py  get_datasets.py  types.py
scripts/: backfill_datasets.py  backfill_pi05_rollout_sessions.py  backfill_rollout_sessions.py  backfill_stats.py
src/: App.tsx  index.css
src/components/: DataExplorer.tsx  EpisodeViewer.tsx  EvalSessions.tsx  FailureAnalysis.tsx  Pairings.tsx  PolicyDetail.tsx  RolloutSection.tsx  RoundVideos.tsx
src/lib/: hf-api.ts  useSearchParam.ts
