[project]
name = "policy-arena"
version = "0.1.0"
description = "Python client for Policy Arena — submit eval results and query leaderboard"
requires-python = ">=3.10"
dependencies = [
    "convex>=0.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["policy_arena*"]
